# n-ary-functor

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  n-ary-functor.cabal  oldest-supported-lts.yaml  stack.yaml
.github/workflows/: check-hackage-matrix.yml  ci.yml
src/: NAryFunctor.hs
src/NAryFunctor/: NF.hs  NT.hs  Variance.hs
test/: doctests.hs
