name:                n-ary-functor
version:             1.0
synopsis:            An n-ary version of Functor
description:         A single typeclass for Functor, Bifunctor, Profunctor, etc.
homepage:            https://github.com/gelisam/n-ary-functor
license:             PublicDomain
author:              Samuel Gélineau
maintainer:          gelisam+github@gmail.com
category:            Data
build-type:          Custom
cabal-version:       >=1.10
extra-source-files:  README.md
                   , CHANGELOG.md

source-repository head
   type: git
   location: https://github.com/gelisam/n-ary-functor

source-repository this
   type: git
   location: https://github.com/gelisam/n-ary-functor
   tag: v1.0

custom-setup
 setup-depends:
   base >= 4 && <5,
   Cabal,
   cabal-doctest >= 1 && <1.1

library
  ghc-options:         -Wall
  exposed-modules:     NAryFunctor
  build-depends:       base >=4.9 && <5
                     , natural-transformation >= 0.4
                     , transformers -any
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite doctests
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  ghc-options:        -Wall -threaded
  main-is:            doctests.hs
  build-depends:      base >4 && <5
                    , doctest
                    , n-ary-functor
  hs-source-dirs:     test
